
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-01-11 DP  1.8.0  Support for operators and op-classes in PostgreSQL 8.3.
2007-01-10 DP  1.6.3  Fix an issue in the Query Tool export option that could
                      result in blank lines in the export file, per Mathias 
                      Durst and Mike.
2007-01-09 DP  1.6.3  Truncate comments containing \r\n correctly, per Erwin.
2007-01-09 DP  1.6.3  Fix query tool title which was unfortunately broken by
                      an earlier fix for another bug.
2007-01-04 DP  1.6.2  Enable the OK button on the database properties dialog
                      when variables are changed.
2007-01-04 DP  1.6.2  Refresh database objects correctly, per Guy Rouillier.
2006-12-28 DP  1.8.0  Add a 'Run Now' options for pgAgent jobs.
2006-12-28 DP  1.8.0  Retain the clipboard contents on app exit.
2006-12-28 DP  1.8.0  Add an option to show NULLs as <NULL> in the Query Tool.
2006-12-28 DP  1.8.0  Remember last used save definition filename.
2006-12-28 DP  1.8.0  Remember last used backup/restore filenames.
2006-12-28 DP  1.8.0  Refactor code to remove support for building the Query
                      Tool with a listview rather than a grid.
2006-12-28 DP  1.6.2  Avoid displaying multi line data in single line list 
                      controls, per Clodoaldo Pinto Neto
2006-12-15 DP  1.6.2  Properly drop foreign keys in schemas whose names require
                      quoting, per M S.
2006-12-14 DP  1.6.2  Avoid a crash when closing the query tool on Solaris
                      [Dhanaraj M]
2006-12-07 DP  1.6.2  Display the transation start time on the server status
                      windows on PostgreSQL 8.3+