@@ -13,6 +13,9 @@ AC_PREFIX_DEFAULT([/usr/local/pgadmin3])
 AC_PROG_CC
 AC_PROG_CXX
 CHECK_CPP_COMPILER
+CHEECK_SUN_COMPILER
+AM_CONDITIONAL([SUN_CC], [test x$SUN_CC_COMPILER = xyes])
+AM_CONDITIONAL([SUN_CXX], [test x$SUN_CXX_COMPILER = xyes])
 CHECK_PRECOMP_HEADERS
 
 # Checks for header files.
