@@ -40,12 +40,24 @@ include $(srcdir)/slony/module.mk
 include $(srcdir)/ui/module.mk
 include $(srcdir)/utils/module.mk
 
+if SUN_CC
+  __CFLAGS=""
+else
+  __CFLAGS=-Wall
+endif
+
+if SUN_CXX
+  __CXXFLAGS=""
+else
+  __CXXFLAGS=-Wall -Wno-non-virtual-dtor
+endif
+
 if !APPBUNDLE
 
 nobase_dist_pkgdata_DATA = $(TMP_ui)
-AM_CXXFLAGS = -DDATA_DIR=\"$(pkgdatadir)/\" -Wall -Wno-non-virtual-dtor -I$(top_srcdir)/pgadmin/include
-AM_CPPFLAGS = -DDATA_DIR=\"$(pkgdatadir)/\" -Wall -Wno-non-virtual-dtor -I$(top_srcdir)/pgadmin/include
-AM_CFLAGS = -DDATA_DIR=\"$(pkgdatadir)/\" -Wall -I$(top_srcdir)/pgadmin/include
+AM_CXXFLAGS = -DDATA_DIR=\"$(pkgdatadir)/\" $(__CXXFLAGS) -I$(top_srcdir)/pgadmin/include
+AM_CPPFLAGS = -DDATA_DIR=\"$(pkgdatadir)/\" $(__CXXFLAGS) -I$(top_srcdir)/pgadmin/include
+AM_CFLAGS = -DDATA_DIR=\"$(pkgdatadir)/\" $(__CFLAGS) -I$(top_srcdir)/pgadmin/include
 
 # Automake trys to execute install-exec-hook if it appears anywhere in the file, so we need a dummy
 # for non-APPBUNDLE cases.
@@ -54,9 +66,9 @@ install-exec-hook:
 else
 
 nobase_dist_data_DATA = $(TMP_ui)
-AM_CXXFLAGS = -Wall -Wno-non-virtual-dtor -I$(top_srcdir)/pgadmin/include
-AM_CPPFLAGS = -Wall -Wno-non-virtual-dtor -I$(top_srcdir)/pgadmin/include
-AM_CFLAGS = -Wall -I$(top_srcdir)/pgadmin/include
+AM_CXXFLAGS = $(__CXXFLAGS) -I$(top_srcdir)/pgadmin/include
+AM_CPPFLAGS = $(__CXXFLAGS) -I$(top_srcdir)/pgadmin/include
+AM_CFLAGS = $(__CFLAGS) -I$(top_srcdir)/pgadmin/include
 
 install-exec-hook:
 	cd $(bindir) ;\
