@@ -35,6 +35,10 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-01-15 DP  1.6.3  Add support for Sun's compiler [Dhanaraj M]
+2007-01-12 DP  1.8.0  Use pg_stattuple (if available) to optionally display
+                      additional table statistics on a per-table basis 
+                      [Guillaume Lelarge, Dave Page]
 2007-01-11 DP  1.8.0  Support for operators and op-classes in PostgreSQL 8.3.
 2007-01-10 DP  1.6.3  Fix an issue in the Query Tool export option that could
                       result in blank lines in the export file, per Mathias 
